# Compresso

./: .gitignore  .pre-commit-config.yaml  Justfile  pyproject.toml  pytest.ini  setup.py
scripts/: clean.py
src/: benchmark.py
src/compresser/: common.h  py_bzip2.c  py_lzma.c  py_zlib.c  router.c
src/compresso/: __init__.py  _core.pyi  cli.py
src/compresso/backend/: __init__.py  benchmark.py  capabilities.py  file_inspect.py  inspect.py  speeds.py
src/compresso/csrc/: _core.c  archive.h  archives.c  archives.h  common.h  compress.c  format.c  format_detection.c  py_bzip2.c  py_lz4.c  py_lzma.c  py_snappy.c  py_zlib.c  py_zstd.c  registry.c  router.c  standalone.h  strategy.c  validate.c  validate.h
src/compresso/csrc/archives/: tar.c  zip.c
src/compresso/csrc/compression/: py_bzip2.c  py_lz4.c  py_lzma.c  py_snappy.c  py_zlib.c  py_zstd.c
src/compresso/csrc/standalone/: bzip2.c  gzip.c  lz4.c  registry.c  xz.c  zstd.c
src/compresso/frontend/: __init__.py  _job.py  api.py  archive_api.py
src/compressor/: __init__.py  _core.c  common.h  py_bzip2.c  py_lz4.c  py_lzma.c  py_snappy.c  py_zlib.c  router.c
tests/: conftest.py
tests/c/: rakefile  test_format_detection.c  test_pipeline.c  test_router.c  unity.c  unity.h
tests/c/compression/: test_bzip2.c  test_lz4.c  test_lzma.c  test_snappy.c  test_zlib.c  test_zstd.c
tests/c/lib/: colour_output.rb  generate_test_runner.rb  rakefile_helper.rb  run_test.erb  test_stubs.c  test_summary.rb  type_sanitiser.rb  yaml_helper.rb
tests/c/standalone/: test_standalone.c
tests/python/: test_cli.py  test_core.py
tests/python/backend/: test_benchmark.py  test_capabilities.py  test_file_inspect.py  test_speeds.py
tests/python/frontend/: test_api.py  test_archive_api.py
