[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compresso"
version = "0.1.0"
description = "A fast C-based Python compression tool supporting multiple algorithms"
authors = [{ name = "Rob Webb" }]
requires-python = ">=3.9"
dependencies = [
    "pygments>=2.20.0",
    "tabulate>=0.9.0,<1.0.0",
    "typer-extensions>=0.2.2,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "prek>=0.4.0,<1.0.0",
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "ruff>=0.15.13,<16.0.0",
    "rust-just>=1.51.0,<2.0.0",
    "setuptools>=82.0.1,<83.0.0",
    "ty>=0.0.35,<0.1.0"
]

[project.scripts]
compresso = "compresso.cli:main"
